tests/fixtures/invalid/bytes_pow_float.py
# Cannot power Bytes and Float
x: float = b"hello" ** 1.0
